--- a/package.json
+++ b/package.json
@@ -9,6 +9,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@alpinejs/collapse": "^3.14.8",
+    "@astrojs/react": "^4.2.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/inter": "^5.1.1",
+    "alpinejs": "^3.14.8",
+    "astro": "^5.2.5",
+    "astro-seo": "^0.8.4",
+    "daisyui": "^4.12.23",
+    "react": "^19.0.0",
+    "tailwindcss": "^3.4.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/alpinejs": "^3.13.11",
+    "@types/node": "^22.13.1"
   }
 }
